# kenneyjam_2022

./: Cargo.toml  README.md
.cargo/: config.toml
src/: components.rs  consts.rs  helpers.rs  main.rs  resources.rs
src/plugins/: auto_battle.rs  drag_and_drop.rs  main_menu.rs  mod.rs  player.rs  spawn.rs
