[package]
name = "kenneyjam_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8.0", features = ["wav"]}
bevy_asset_loader = { version = "0.12.0", features = ["stageless", "2d"] }
bevy_prototype_lyon = "0.6.0"
bevy_rapier2d = "0.16.1"
iyes_loopless = "0.7.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
